[CK] apache server, oracle jdk 1.7 and maven installed

--- a/centos_rpmbuild/Dockerfile
+++ b/centos_rpmbuild/Dockerfile
@@ -10,6 +10,7 @@ RUN yum -y install git
 RUN yum -y install rpm-build
 RUN yum -y install yum-utils
 RUN yum -y install rpmdevtools
+RUN yum -y install vim
 
 # Setup sshd to accept login
 RUN yum -y install openssh-server
@@ -30,6 +31,23 @@ RUN echo 'build ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 RUN useradd -d /home/build -p `openssl passwd -1 "build"` build
 RUN sudo -ubuild rpmdev-setuptree
 RUN sudo -ubuild echo '%_topdir %(echo $HOME)/rpmbuild' > ~/.rpmmacros
+
+# Apache http server
+RUN yum -y install httpd; yum clean all
+RUN echo "Apache HTTPD" >> /var/www/html/index.html
+EXPOSE 80
+
+RUN wget --no-cookies --no-check-certificate --header "Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie" -O jdk-linux-x64.rpm "http://download.oracle.com/otn-pub/java/jdk/7u79-b15/jdk-7u79-linux-x64.rpm"
+RUN rpm -Uvh jdk-linux-x64.rpm
+RUN rm jdk-linux-x64.rpm
+ENV JAVA_HOME /usr/java/default
+
+RUN yum -y install tar
+RUN wget http://mirror.nus.edu.sg/apache/maven/maven-3/3.3.3/binaries/apache-maven-3.3.3-bin.tar.gz
+RUN tar -xzf apache-maven-3.3.3-bin.tar.gz -C /usr/local
+
+RUN echo "export M2_HOME=/usr/local/apache-maven-3.3.3" >> /home/build/.bashrc
+RUN echo "export PATH=\${M2_HOME}/bin:\${PATH}" >> /home/build/.bashrc
 
 # Set environment variables
 ENV HOME /root
