[CK] Node installed

--- a/centos_rpmbuild/Dockerfile
+++ b/centos_rpmbuild/Dockerfile
@@ -46,12 +46,20 @@ RUN yum -y install tar
 RUN wget http://mirror.nus.edu.sg/apache/maven/maven-3/3.3.3/binaries/apache-maven-3.3.3-bin.tar.gz
 RUN tar -xzf apache-maven-3.3.3-bin.tar.gz -C /usr/local
 
+RUN wget http://nodejs.org/dist/v0.12.7/node-v0.12.7-linux-x64.tar.gz
+RUN tar --strip-components 1 -xzvf node-v* -C /usr/local
+RUN npm install -g shelljs
+
+RUN echo "export NODE_PATH=/usr/local/lib/node_modules" >> /home/build/.bashrc
 RUN echo "export M2_HOME=/usr/local/apache-maven-3.3.3" >> /home/build/.bashrc
 RUN echo "export PATH=\${M2_HOME}/bin:\${PATH}" >> /home/build/.bashrc
 
+RUN echo "export NODE_PATH=/usr/local/lib/node_modules" >> /root/.bashrc
+RUN echo "export M2_HOME=/usr/local/apache-maven-3.3.3" >> /root/.bashrc
+RUN echo "export PATH=\${M2_HOME}/bin:\${PATH}" >> /root/.bashrc
+
 # Set environment variables
 ENV HOME /root
-WORKDIR /root/rpmbuild
 
 # Set default `docker run` command behavior
 CMD /usr/sbin/sshd -D
