[CK] jq and tree installed

--- a/centos_rpmbuild/Dockerfile
+++ b/centos_rpmbuild/Dockerfile
@@ -50,6 +50,10 @@ RUN wget http://nodejs.org/dist/v0.12.7/node-v0.12.7-linux-x64.tar.gz
 RUN tar --strip-components 1 -xzvf node-v* -C /usr/local
 RUN npm install -g shelljs
 
+RUN yum -y install tree
+RUN wget http://stedolan.github.io/jq/download/linux64/jq -O /usr/bin/jq
+RUN chmod 755 /usr/bin/jq
+
 RUN echo "export NODE_PATH=/usr/local/lib/node_modules" >> /home/build/.bashrc
 RUN echo "export M2_HOME=/usr/local/apache-maven-3.3.3" >> /home/build/.bashrc
 RUN echo "export PATH=\${M2_HOME}/bin:\${PATH}" >> /home/build/.bashrc
